# herox-voice-module

./: .gitignore  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  README.md  requirements.txt  requirements_voice.sh  setup.py  vad_voice_module_final.py
config/: README.md  dds_ngsild_mapping_placeholder.yaml  ngsild_mapping_example.json
docker/: README.md
docs/: 01_arise_context.md  02_interfaces.md  03_installation_and_hello_world.md  04_basic_demo_how_to_use.md  05_role_in_demonstrator.md
examples/: README.md  sample_commands.md
launch/: README.md  hri_voice_command.launch.py
legacy/: requirements_voice_original.sh
media/: video_link.md
ros2_ws/src/hri_voice_command/: LICENSE  package.xml  setup.cfg
ros2_ws/src/hri_voice_command/config/: 00-defaults.yml  config.yaml
ros2_ws/src/hri_voice_command/hri_voice_command/: __init__.py  node_voice_command.py
ros2_ws/src/hri_voice_command/legacy/: vad_voice_module_final.py
ros2_ws/src/hri_voice_command/module/: hri_voice_command_module.yaml
ros2_ws/src/hri_voice_command/test/: test_placeholder.py
