<?xml version="1.0"?>
<package format="3">
  <name>hri_voice_command</name>
  <version>0.1.0</version>
  <description>ROS2 Whisper VAD-gated wake-word and voice-command recognition node.</description>

  <maintainer email="ceo@neurofai.de">NeuroFAI</maintainer>
  <license>AGPL-3.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>ament_index_python</depend>
  <depend>std_msgs</depend>
  <depend>hri_msgs</depend>
  <depend>python3-numpy</depend>
  <depend>python3-yaml</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
